--- a/app.json
+++ b/app.json
@@ -6,7 +6,7 @@
       "pdf",
       "documents"
     ],
-    "website": "https://www.docuseal.co/",
+    "website": "https://www.docuseal.com/",
     "repository": "https://github.com/docusealco/docuseal",
     "logo": "https://avatars.githubusercontent.com/u/138379721?s=200",
     "success_url": "/",
